--- a/Crud.UI/Crud.UI.csproj
+++ b/Crud.UI/Crud.UI.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Crud.EF\Crud.EF.csproj" />
+  </ItemGroup>
+
 </Project>
